# couchers

./: .dockerignore  .env  .env.development  .env.localdev  .env.next  .env.preview  .env.production  .env.staging  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitpod.yml  .prettierignore  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.backedupold  Dockerfile.prod  Dockerfile.stage  Makefile  README.md  appConstants.ts  buildspec.yml  ci-build-protos.sh  couchers.code-workspace  dev.Dockerfile  dl-protos.sh  docker-compose.yaml  fonts.ts  generate_protos.sh  jest.config.js  license.md  next-i18next.config.d.ts  next-i18next.config.js  next.config.js  package.json  prod.Dockerfile  readme.md  redirects.js  routes.ts  (+3 more)
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.storybook/: i18n.ts  main.js  preview.js
accounting/: expenses.csv
app/: .gitignore  .gitlab-ci.yml  architecture.md  backend.dev.env  backend.local.env  backend.staging.env  backend.test.env  create_event.py  deploy.sh  docker-compose.gitpod.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.vue.yml  docker-compose.yml  frontend.dev.env  generate_protos.sh  media.dev.env  media.staging.env  media.test.env  old-readme.md  postgres.dev.env  postgres.env  postgres.test.env  prometheus.dev.env  readme.md
app/client/: .gitignore  README.md  license.md  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
app/client/src/couchers/: __init__.py  client.py  services.py
backend/: .gitignore  app.py  requirements.txt
design/: readme
(+4391 files in other folders)
